allow autocomplete on with 1 parameter and fix console wrap on firefox

--- a/Kudu.Services.Web/Content/Styles/FileBrowser.css
+++ b/Kudu.Services.Web/Content/Styles/FileBrowser.css
@@ -51,7 +51,7 @@ div.console {
     font-family: 'Lucida Console', Consolas, 'Courier New', monospace;
     height: 100%;
     margin: auto;
-    white-space: pre;
+    white-space: pre-wrap;
     width: 100%;
 }
 
@@ -62,6 +62,7 @@ div.console {
         margin-left: auto;
         margin-right: auto;
         overflow: auto;
+        word-break: break-all;
         word-wrap: break-word;
         padding: 0.3em;
         width: 100%;
